<resources>
    <string name="app_name">D&amp;E</string>
    <string name="category_numbers">Numbers</string>
    <string name="category_family">Family</string>
    <string name="category_colors">Colors</string>
    <string name="category_animals">Animals</string>
    <string name="category_fruits">Fruits</string>
    <string name="category_vegetables">Vegetables</string>
    <string name="category_phrases">Phrases</string>
    <string name="category_games">Games</string>
    <string name="category_others">Others</string>
</resources>
