<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:text="@string/category_numbers" />

    <TextView
        android:id="@+id/family"
        style="@style/CategoryStyle"
        android:background="@color/category_family"
        android:text="@string/category_family" />

    <TextView
        android:id="@+id/colors"
        style="@style/CategoryStyle"
        android:background="@color/category_colors"
        android:text="@string/category_colors" />
    <TextView
        android:id="@+id/animals"
        style="@style/CategoryStyle"
        android:background="@color/category_animals"
        android:text="@string/category_animals" />

    <TextView
        android:id="@+id/fruits"
        style="@style/CategoryStyle"
        android:background="@color/category_fruits"
        android:text="@string/category_fruits" />
    <TextView
        android:id="@+id/vegetables"
        style="@style/CategoryStyle"
        android:background="@color/category_vegetables"
        android:text="@string/category_vegetables" />

    <TextView
        android:id="@+id/phrases"
        style="@style/CategoryStyle"
        android:background="@color/category_phrases"
        android:text="@string/category_phrases" /> />

        <TextView
            android:id="@+id/games"
            style="@style/CategoryStyle"
            android:background="@color/category_games"
            android:text="@string/category_games" /> />

    <TextView
        android:id="@+id/others"
        style="@style/CategoryStyle"
        android:background="@color/category_others"
        android:text="@string/category_others" /> />
    </LinearLayout>
</ScrollView>

</LinearLayout>